SERVER-97189 Add parsing uasserts to rankFusion and scoreFusion (#29215)

GitOrigin-RevId: ebdc46f472644462d81c38c0e1585a32cd4f450d